--- a/index.html
+++ b/index.html
@@ -32,16 +32,31 @@
 <section class="works">
 <div class="projects">
 
+
 <div class="typographic-space">
-  <h2 class="project-name"> TYPOGRAPHIC SPACE </h2>
+<div class="project-text">
+<h2> <a href="project1.html" class="project-name"> TYPOGRAPHIC SPACE </a></h2>
+<p> SUMMER 2019 </p>
+<p> print design, visual design</p>
+</div>
+<img class="image-hover" alt="typographic space" src="img/img_9119.jpg">
 </div>
 
+
 <div class="aral-sea">
-  <h2 class="project-name"> ARAL SEA </h2>
+  <div class="project-text">
+  <h2> <a href="project2.html" class="project-name"> ARAL SEA </a> </h2>
+  <p>FALL 2019 </p>
+  <p> Interaction design, user research<p>
+  </div>
+  <img class="image-hover" alt="aral sea" src="img/img_91761.jpg">
 </div>
 
 <div class="the-peak">
-  <h2 class="project-name"> THE PEAK </h2>
+  <div class="project-text">
+  <h2> <a href="project3.html" class="project-name"> THE PEAK  </a> </h2>
+  <p> SUMMER 2018 — PRESENT </p>
+  <p> print design, visual design </p>
 </div>
 
 
