--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 </head>
 
 <body>
-<header>
-<p> Brianna Quan </p>
+<nav>
+
 <div class="nav">
+<h5> Brianna Quan </h5>
+
+<div class="nav-links">
 <a href="#works"> Works </a>
 <a href="about.html"> About </a>
 <a href="#resume"> Resume </a>
 </div>
+</div>
+</nav>
 
-</header>
 <section class="landing">
 <div class="landing-page">
 <div classs="landing-content">
@@ -33,30 +37,30 @@
 <div class="projects">
 
 
-<div class="typographic-space">
+<div class="project typographic-space">
 <div class="project-text">
 <h2> <a href="project1.html" class="project-name"> TYPOGRAPHIC SPACE </a></h2>
-<p> SUMMER 2019 </p>
-<p> print design, visual design</p>
+<h4> SUMMER 2019 </h4>
+<h4> print design, visual design</h4>
 </div>
 <img class="image-hover" alt="typographic space" src="img/img_9119.jpg">
 </div>
 
 
-<div class="aral-sea">
+<div class="project aral-sea">
   <div class="project-text">
   <h2> <a href="project2.html" class="project-name"> ARAL SEA </a> </h2>
-  <p>FALL 2019 </p>
-  <p> Interaction design, user research<p>
+  <h4>FALL 2019 </h4>
+  <h4> Interaction design, user research<h4>
   </div>
   <img class="image-hover" alt="aral sea" src="img/img_91761.jpg">
 </div>
 
-<div class="the-peak">
+<div class="project the-peak">
   <div class="project-text">
   <h2> <a href="project3.html" class="project-name"> THE PEAK  </a> </h2>
-  <p> SUMMER 2018 — PRESENT </p>
-  <p> print design, visual design </p>
+  <h4> SUMMER 2018 — PRESENT </h4>
+  <h4> print design, visual design </h4>
 </div>
 
 
