--- a/about.html
+++ b/about.html
@@ -31,5 +31,13 @@
 </div>
 </section>
 
+<footer>
+<div class="footer-content">
+  <a href="citations.html">  Citations </a>
+  <a href="styleguide.html">Styleguide  </a>
+  <a href="https://github.com/briannaq/Portfolio.git"> GitHub </a>
+</div>
+
+</footer>
 </body>
 <html>
