--- a/index.html
+++ b/index.html
@@ -69,5 +69,14 @@
 
 </section>
 
+<footer>
+<div class="footer-content">
+  <a href="citations.html">  Citations </a>
+  <a href="styleguide.html">Styleguide  </a>
+  <a href="https://github.com/briannaq/Portfolio.git"> GitHub </a>
+</div>
+
+</footer>
+
 </body>
 </html>
