--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h4> SUMMER 2019 </h4>
 <h4> print design, visual design</h4>
 </div>
-<img class="image-hover" alt="typographic space" src="img/img_9119.jpg">
+<img class="image-hover" alt="typographic space" src="img/typographic.png">
 </div>
 
 
