--- a/project1.html
+++ b/project1.html
@@ -32,7 +32,7 @@
   <h2> TYPOGRAPHIC SPACE </h2>
 
 <div class="role-tools">
-  <div class="">
+  <div class="div-section">
   <h4> ROLE </h4>
   <p> visual designer, art director </p>
   </div>
@@ -56,9 +56,9 @@
 
 
 <div class="process process-section">
-<h2 class="center-title"> Ideation Process </h2>
+<h2 class="work-subtitle"> Ideation Process </h2>
 
-<p class="center-text"> The ideation process began with several hand-drawn sketches of different layout possibilities. I then continued to explore and ideate more designs through digital roughs and mockups. </p>
+<p class="description"> The ideation process began with several hand-drawn sketches of different layout possibilities. I then continued to explore and ideate more designs through digital roughs and mockups. </p>
 
 <div class="images">
   <div class="pic">
@@ -73,7 +73,7 @@
 
 <div class="art-direction">
 
-<h2> Art Direction </h2>
+<h2 class="work-subtitle"> Art Direction </h2>
 
 <div class="art-content">
 
@@ -88,11 +88,11 @@
 
 
 <div class="design-rationale process-section">
-  <h2 class="center-title"> Design Rationale </h2>
-  <p class="center-text">For my solutions, the main point I wanted to focus on was establishing clear reading hierarchy, readability, and legibility. I achieved this through using white space as it helped create flow and guidance for the readers. To guide the reader’s eyes through the composition, I isolated clusters that should be viewed first as well as utilized lines and shapes. I also decided to use colour within my solutions to create contrast while also keeping the theme of my overall magazine. In comparison to black and white, the colour helped the composition feel less flat and static, allowing for more contrast between the text. Using typographic elements such as lines helped balance the color out and assist with readability. </p>
+  <h2 class="work-subtitle"> Design Rationale </h2>
+  <p class="description">For my solutions, the main point I wanted to focus on was establishing clear reading hierarchy, readability, and legibility. I achieved this through using white space as it helped create flow and guidance for the readers. To guide the reader’s eyes through the composition, I isolated clusters that should be viewed first as well as utilized lines and shapes. I also decided to use colour within my solutions to create contrast while also keeping the theme of my overall magazine. In comparison to black and white, the colour helped the composition feel less flat and static, allowing for more contrast between the text. Using typographic elements such as lines helped balance the color out and assist with readability. </p>
 
 <div class="final-solution process-section">
-<h2 class="center-title"> Final Solutions </h2>
+<h2 class="work-subtitle"> Final Solutions </h2>
 
 <div class="solutions">
 <div class="solution-pic">
@@ -112,7 +112,7 @@
 </div>
 </div>
 <div class="conclusion process-section">
-<h2 class="center-title"> Conclusion </h2>
+<h2 class="work-subtitle"> Conclusion </h2>
 </div>
 
 </section>
