--- a/about.html
+++ b/about.html
@@ -25,13 +25,13 @@
 
 <section class="about-page">
 <div class="about">
-<h2 class="bio-intro"> Hii! I’m Brianna, an aspiring UX/UI Designer and Visual Designer  currently working at The Peak Publications. </h2>
-<p class="bio-body"> Hello, I’m Brianna., an aspiring UX/UI Designer and Visual Designer  currently working at The Peak Publications. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+<h2 class="bio-intro"> Hii! I'm Brianna, an aspiring UX/UI Designer and visual designer based in Vancouver, Canada.  </h2>
+<p class="bio-body"> I am a third year student at Simon Fraser University, studying Interactive Arts & Technology. As a designer, my goal is to create meaningful experiences to empower and inspire all individuals. Through storytelling, digital design, and critical thinking, I am able to express my creativity and share it with the world. Currently, I am working The Peak Publications as the Assistant Production Editor.
 <p>
-<p> You can contact me at briannaq@sfu.ca !</p>
-</div>
-</section>
 
+<p> When I'm not designing, you can find me playing my ukulele, taking photos or reading a book. </p>
+<p> I am always interested in new opportunities! If you would like to collaborate or contact me you can email me at briannaq@sfu.ca. </p>
+</div>
 <footer>
 <div class="footer-content">
   <a href="citations.html">  Citations </a>
@@ -40,5 +40,8 @@
 </div>
 
 </footer>
+</section>
+
+
 </body>
 <html>
