--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 </nav>
 
-<section class="landing">
+<div class="panel" data-color="white">
 <div class="landing-page">
 <div classs="landing-content">
 <h1 class="title"> BRIANNA QUAN </h1>
@@ -31,9 +31,9 @@
   </h3>
 </div>
 </div>
-</section>
+</div>
 
-<section id="works">
+<div id="works" class="panel" data-color="blue">
 <div class="projects">
 
 
@@ -41,7 +41,7 @@
 <div class="project-text">
 <h2> <a href="project1.html" class="project-name"> TYPOGRAPHIC SPACE </a></h2>
 <h4> SUMMER 2019 </h4>
-<h4> print design, visual design</h4>
+<p> PRINT DESIGN, VISUAL DESIGN</p>
 </div>
 <img class="image-hover" alt="typographic space" src="img/typographic.png">
 </div>
@@ -49,25 +49,26 @@
 
 <div class="project aral-sea">
   <div class="project-text">
-  <h2> <a href="project2.html" class="project-name"> ARAL SEA </a> </h2>
+  <h2> <a href="project2.html" class="project-name"> CARE TO WEAR </a> </h2>
   <h4>FALL 2019 </h4>
-  <h4> Interaction design, user research<h4>
+  <p> UX/UI DESIGN<p>
   </div>
   <img class="image-hover" alt="aral sea" src="img/img_91761.jpg">
 </div>
 
-<div class="project the-peak">
+<!-- <div class="project the-peak">
   <div class="project-text">
   <h2> <a href="project3.html" class="project-name"> THE PEAK  </a> </h2>
   <h4> SUMMER 2018 — PRESENT </h4>
   <h4> print design, visual design </h4>
-</div>
+</div> -->
 
 
 </div>
 
 
-</section>
+</div>
+
 
 <footer>
 <div class="footer-content">
@@ -79,4 +80,6 @@
 </footer>
 
 </body>
+
+
 </html>
