--- a/project1.html
+++ b/project1.html
@@ -29,7 +29,7 @@
 
 <div class="project-intro">
 <div class="description">
-  <h2> TYPOGRAPHIC SPACE </h2>
+  <h2 class="work-subtitle"> TYPOGRAPHIC SPACE </h2>
 
 <div class="role-tools">
   <div class="div-section">
