--- a/project2.html
+++ b/project2.html
@@ -121,10 +121,11 @@
 
 <p class="description"> My primary role throughout this project was prototyping and being one of the interface designers. As an interface designer, my responsibility was to design the interface layout of the home landing screen – the summary tracking page. </p>
 
+<div class="video">
 
 <iframe src="https://player.vimeo.com/video/376218999" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <p><a href="https://vimeo.com/376218999">IAT 334 - Care To Wear</a> from <a href="https://vimeo.com/daryatyugay">Darya Tyugay</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-
+</div>
 </section>
 
 
