--- a/styleguide.html
+++ b/styleguide.html
@@ -39,9 +39,10 @@
 <section class="element">
 <h5> text elements </h5>
 
-<h1> title </h1>
-<h2> subtitle </h2>
-<h3> hello </h3>
+<h2> TITLE </h2>
+<h3> Heading </h3>
+<h4> HEADING </h4>
+<h5> Heading </h5>
 
 </section>
 
