Added new pages and fixed responsiveness
added citations.html
added more elements to styleguide.html
added favicon
fixed responsiveness to all pages

--- a/about.html
+++ b/about.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+
   <meta charset="utf-8">
   <title> My Portfolio </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,35 +18,36 @@
 <nav>
 
 <div class="nav">
-<h5> Brianna Quan </h5>
+<h5> <a class="logo" href="index.html"> Brianna Quan </a> </h5>
 
 <div class="nav-links">
 <a href="index.html#works"> Works </a>
 <a href="about.html"> About </a>
-<a href="#resume"> Resume </a>
+<a href="https://drive.google.com/file/d/1gQ20zm0p3d0cqbuqbhNhwszKKdUZspt8/view?usp=sharing"> Resume </a>
 </div>
 </div>
 </nav>
 
 <section class="about-page">
 <div class="about">
-<h2 class="bio-intro"> Hii! I'm Brianna, an aspiring UX/UI Designer and visual designer based in Vancouver, Canada.  </h2>
+<h2 class="bio-intro"> Hii! I'm Brianna, an aspiring UX/UI Designer and Visual Designer based in Vancouver, Canada.  </h2>
 <p class="bio-body"> I am a third year student at Simon Fraser University, studying Interactive Arts & Technology. As a designer, my goal is to create meaningful experiences to empower and inspire all individuals. Through storytelling, digital design, and critical thinking, I am able to express my creativity and share it with the world. Currently, I am working The Peak Publications as the Assistant Production Editor.
 <p>
 
 <p> When I'm not designing, you can find me playing my ukulele, taking photos or reading a book. </p>
-<p> I am always interested in new opportunities! If you would like to collaborate or contact me you can email me at briannaq@sfu.ca. </p>
+<p> I am always interested in new opportunities! If you would like to collaborate or contact me you can email me at
+  <a class="email" href="mailto:briannaq@sfu.ca"> <strong> briannaq@sfu.ca</strong> </a></p>
 </div>
+
+</section>
 <footer>
 <div class="footer-content">
   <a href="citations.html">  Citations </a>
   <a href="styleguide.html">Styleguide  </a>
   <a href="https://github.com/briannaq/Portfolio.git"> GitHub </a>
 </div>
-
+<p class="copyright">&copy Brianna Quan 2020 </p>
 </footer>
-</section>
-
 
 </body>
 <html>
