--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+
   <meta charset="utf-8">
   <title> My Portfolio </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,12 +19,12 @@
 <nav>
 
 <div class="nav">
-<h5> Brianna Quan </h5>
+<h5> <a class="logo" href="index.html"> Brianna Quan </a> </h5>
 
 <div class="nav-links">
 <a href="#works"> Works </a>
 <a href="about.html"> About </a>
-<a href="#resume"> Resume </a>
+<a href="https://drive.google.com/file/d/1gQ20zm0p3d0cqbuqbhNhwszKKdUZspt8/view?usp=sharing"> Resume </a>
 </div>
 </div>
 </nav>
@@ -53,7 +59,7 @@
   <h4>FALL 2019 </h4>
   <p> UX/UI DESIGN<p>
   </div>
-  <img class="image-hover" alt="aral sea" src="img/img_91761.jpg">
+  <img class="image-hover" alt="aral sea" src="img/Care-to-wear.png">
 </div>
 
 <!-- <div class="project the-peak">
@@ -76,6 +82,7 @@
   <a href="styleguide.html">Styleguide  </a>
   <a href="https://github.com/briannaq/Portfolio.git"> GitHub </a>
 </div>
+<p class="copyright">&copy Brianna Quan 2020 </p>
 
 </footer>
 
