--- a/project1.html
+++ b/project1.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+
+
   <meta charset="utf-8">
   <title> My Portfolio </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,12 +21,12 @@
 
 <div class="nav">
 
-<h5> Brianna Quan </h5>
+<h5> <a class="logo" href="index.html"> Brianna Quan </a> </h5>
 
 <div class="nav-links">
 <a href="index.html#works"> Works </a>
 <a href="about.html"> About </a>
-<a href="#resume"> Resume </a>
+<a href="https://drive.google.com/file/d/1gQ20zm0p3d0cqbuqbhNhwszKKdUZspt8/view?usp=sharing"> Resume </a>
 </div>
 </div>
 </nav>
@@ -111,8 +118,11 @@
 </div>
 </div>
 </div>
+
 <div class="conclusion process-section">
-<h2 class="work-subtitle"> Conclusion </h2>
+<h2 class="work-subtitle"> Reflection </h2>
+<p class="description"> I really enjoyed working on this project as it allowed me to express my creativity and explore different approaches. I have learned to how to better communicate my designs through the principles of hierarchy, alignment and page layouts.
+</p>
 </div>
 
 </section>
@@ -125,7 +135,7 @@
   <a href="styleguide.html">Styleguide  </a>
   <a href="https://github.com/briannaq/Portfolio.git"> GitHub </a>
 </div>
-
+<p class="copyright">&copy Brianna Quan 2020 </p>
 
 </footer>
 </body>
