--- a/project2.html
+++ b/project2.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+
   <meta charset="utf-8">
   <title> My Portfolio </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,12 +20,12 @@
 
 <div class="nav">
 
-<h5> Brianna Quan </h5>
+<h5> <a class="logo" href="index.html"> Brianna Quan </a> </h5>
 
 <div class="nav-links">
 <a href="index.html#works"> Works </a>
 <a href="about.html"> About </a>
-<a href="#resume"> Resume </a>
+<a href="https://drive.google.com/file/d/1gQ20zm0p3d0cqbuqbhNhwszKKdUZspt8/view?usp=sharing"> Resume </a>
 </div>
 </div>
 </nav>
@@ -57,7 +63,7 @@
 </div>
 
 <div class="project-img">
-<img class="intro-img" alt="Typographic space" src="img/typographic.png">
+<img class="intro-img" alt="Typographic space" src="img/Care-to-wear.png">
 </div>
 
 </div>
@@ -126,6 +132,12 @@
 <iframe src="https://player.vimeo.com/video/376218999" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <p><a href="https://vimeo.com/376218999">IAT 334 - Care To Wear</a> from <a href="https://vimeo.com/daryatyugay">Darya Tyugay</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 </div>
+
+
+<div class="reflection">
+<h2> Reflection </h2>
+<p class="description"> From this project, I have learned how important user research and user testing is when designing app. These strategies help us better understand our audiences' goals and frustrations  and allows us to design a more positive experience. In addition, while designing Care to Wear I have gained a new outlook on sustainability and how it impacts the environment.  </p>
+</div>
 </section>
 
 
@@ -136,7 +148,7 @@
   <a href="styleguide.html">Styleguide  </a>
   <a href="https://github.com/briannaq/Portfolio.git"> GitHub </a>
 </div>
-
+<p class="copyright">&copy Brianna Quan 2020 </p>
 
 </footer>
 </body>
