--- a/styleguide.html
+++ b/styleguide.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+
   <meta charset="utf-8">
   <title> My Portfolio </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,12 +15,19 @@
 </head>
 
 <body>
+
+
 <div class="title">
-<h1> STYLEGUIDE </h1>
+<h2> STYLEGUIDE </h2>
 </div>
 
 <section class="element">
 <h5> In-text link </h5>
+  <a class="email" href=""> <strong> click here </strong> </a>
+
+    <div class="footer-content footer-style">
+      <a href="citations.html">  Citations </a>
+      </div>
 
 </section>
 
@@ -34,6 +46,17 @@
 <section class="element">
 <h5> Navigation </h5>
 
+
+<div class="nav">
+<h5> Brianna Quan </h5>
+
+<div class="nav-links">
+<a href="#works"> Works </a>
+<a href="about.html"> About </a>
+<a href="https://drive.google.com/file/d/1gQ20zm0p3d0cqbuqbhNhwszKKdUZspt8/view?usp=sharing"> Resume </a>
+</div>
+</div>
+
 </section>
 
 <section class="element">
@@ -43,6 +66,8 @@
 <h3> Heading </h3>
 <h4> HEADING </h4>
 <h5> Heading </h5>
+
+<p class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
 </section>
 
