--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <link rel="manifest" href="/site.webmanifest">
 
   <meta charset="utf-8">
-  <title> My Portfolio </title>
+  <title> Brianna Quan </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="css/fonts.css" rel="stylesheet">
@@ -46,7 +46,7 @@
   <a href="styleguide.html">Styleguide  </a>
   <a href="https://github.com/briannaq/Portfolio.git"> GitHub </a>
 </div>
-<p class="copyright">&copy Brianna Quan 2020 </p>
+<p class="copyright">&copy; Brianna Quan 2020 </p>
 </footer>
 
 </body>
