--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="manifest" href="/site.webmanifest">
 
   <meta charset="utf-8">
-  <title> My Portfolio </title>
+  <title> Brianna Quan </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="css/fonts.css" rel="stylesheet">
@@ -31,7 +31,7 @@
 
 <div class="panel" data-color="white">
 <div class="landing-page">
-<div classs="landing-content">
+<div class="landing-content">
 <h1 class="title"> BRIANNA QUAN </h1>
 <h3 class="intro-text"> Aspiring visual and experience designer based in Vancouver, Canada. Currently working at The Peak Publications.
   </h3>
@@ -82,7 +82,7 @@
   <a href="styleguide.html">Styleguide  </a>
   <a href="https://github.com/briannaq/Portfolio.git"> GitHub </a>
 </div>
-<p class="copyright">&copy Brianna Quan 2020 </p>
+<p class="copyright">&copy; Brianna Quan 2020 </p>
 
 </footer>
 
