--- a/project1.html
+++ b/project1.html
@@ -10,7 +10,7 @@
 
 
   <meta charset="utf-8">
-  <title> My Portfolio </title>
+  <title> Brianna Quan </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="css/fonts.css" rel="stylesheet">
@@ -33,10 +33,20 @@
 
 <section class="case-studies">
 
+<div class="proj-banner">
+<div class="proj-header">
+<h2 class="banner-font"> TYPOGRAPHIC SPACE </h2>
+</div>
+<div class="project-img">
+<img class="intro-img" alt="Typographic space" src="img/typographic.png">
+</div>
+
+</div>
+<div class="content">
 
 <div class="project-intro">
 <div class="description">
-  <h2 class="work-subtitle"> TYPOGRAPHIC SPACE </h2>
+  <!-- <h2 class="work-subtitle"> TYPOGRAPHIC SPACE </h2> -->
 
 <div class="role-tools">
   <div class="div-section">
@@ -44,7 +54,7 @@
   <p> visual designer, art director </p>
   </div>
 
-  <div class="">
+  <div class="div-section">
     <h4> TOOLS </h4>
     <p> Adobe Illustrator, Adobe Indesign </p>
 </div>
@@ -55,9 +65,9 @@
 <p> With this assignment I chose to redesign The Beatles vinyl album track list. As a result,  a bounded magazine is presented to demonstrate our understanding of typographic space and magazine production. </p>
 </div>
 
-<div class="project-img">
+<!-- <div class="project-img">
 <img class="intro-img" alt="Typographic space" src="img/typographic.png">
-</div>
+</div> -->
 
 </div>
 
@@ -92,7 +102,7 @@
 <img class="art-pic" alt="art-direction" src="img/artdirection.png">
 </div>
 </div>
-
+</div>
 
 <div class="design-rationale process-section">
   <h2 class="work-subtitle"> Design Rationale </h2>
@@ -118,13 +128,13 @@
 </div>
 </div>
 </div>
-
+</div>
 <div class="conclusion process-section">
 <h2 class="work-subtitle"> Reflection </h2>
 <p class="description"> I really enjoyed working on this project as it allowed me to express my creativity and explore different approaches. I have learned to how to better communicate my designs through the principles of hierarchy, alignment and page layouts.
 </p>
 </div>
-
+</div>
 </section>
 
 
@@ -135,7 +145,7 @@
   <a href="styleguide.html">Styleguide  </a>
   <a href="https://github.com/briannaq/Portfolio.git"> GitHub </a>
 </div>
-<p class="copyright">&copy Brianna Quan 2020 </p>
+<p class="copyright">&copy; Brianna Quan 2020 </p>
 
 </footer>
 </body>
