--- a/project2.html
+++ b/project2.html
@@ -9,7 +9,7 @@
 <link rel="manifest" href="/site.webmanifest">
 
   <meta charset="utf-8">
-  <title> My Portfolio </title>
+  <title> Brianna Quan </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="css/fonts.css" rel="stylesheet">
@@ -32,10 +32,18 @@
 
 <section class="case-studies">
 
+  <div class="proj-banner">
+  <div class="proj-header">
+  <h2 class="banner-font"> CARE TO WEAR </h2>
+  </div>
+  <div class="project-img">
+    <img class="intro-img" alt="Typographic space" src="img/Care-to-wear.png">
+  </div>
+  </div>
 
+<div class="content">
 <div class="project-intro">
 <div class="description">
-  <h2> CARE TO WEAR </h2>
 
 <div class="role-tools">
   <div class="div-section">
@@ -53,8 +61,6 @@
     <h4> TOOLS </h4>
     <p> Figma, Protopie </p>
 </div>
-
-
 </div>
 
 <p> Care to Wear is an application that tracks your resource consumption based on the clothing you purchase. The app aims to show the direct link between clothing consumption and the environment while also providing methods for finding clothes more sustainably that do not break the bank.  </p>
@@ -62,9 +68,6 @@
 <p> This project is the outcome of a 4-week, senior level interaction design class. The goal of the project was to research, propose and design and interactive system for a specific domain and context.  </p>
 </div>
 
-<div class="project-img">
-<img class="intro-img" alt="Typographic space" src="img/Care-to-wear.png">
-</div>
 
 </div>
 
@@ -137,6 +140,7 @@
 <div class="reflection">
 <h2> Reflection </h2>
 <p class="description"> From this project, I have learned how important user research and user testing is when designing app. These strategies help us better understand our audiences' goals and frustrations  and allows us to design a more positive experience. In addition, while designing Care to Wear I have gained a new outlook on sustainability and how it impacts the environment.  </p>
+</div>
 </div>
 </section>
 
