--- a/citations.html
+++ b/citations.html
@@ -9,7 +9,7 @@
 <link rel="manifest" href="/site.webmanifest">
 
   <meta charset="utf-8">
-  <title> My Portfolio </title>
+  <title> Brianna Quan </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="css/fonts.css" rel="stylesheet">
